release/0.4.2
* [maven-release-plugin] prepare release v0.4.2
* Added CI test reports
* [maven-release-plugin] prepare for next development iteration